--- a/kafka-event-stream.yaml
+++ b/kafka-event-stream.yaml
@@ -1,5 +1,7 @@
 ---
-Transform: AWS::Serverless-2016-10-31
+AWSTemplateFormatVersion: "2010-09-09"
+
+Transform: [AWS::Serverless-2016-10-31]
 
 Parameters:
   ReplicationInstanceClass:
@@ -56,6 +58,40 @@ Resources:
       Tags:
         - Key: Name
           Value: !Ref EnvironmentName
+
+  VPCFlowLog:
+    Type: AWS::EC2::FlowLog
+    Properties:
+      DeliverLogsPermissionArn: !GetAtt FlowLogRole.Arn
+      LogGroupName: FlowLogsGroup
+      ResourceId: !Ref VPC
+      ResourceType: VPC
+      TrafficType: ALL
+
+  FlowLogRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: vpc-flow-logs.amazonaws.com
+            Action: sts:AssumeRole
+      Path: /
+      Policies:
+        - PolicyName: Logs
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "logs:CreateLogGroup"
+                  - "logs:CreateLogStream"
+                  - "logs:PutLogEvents"
+                  - "logs:DescribeLogGroups"
+                  - "logs:DescribeLogStreams"
+                Resource: ["*"]
 
   InternetGateway:
     Type: AWS::EC2::InternetGateway
@@ -312,7 +348,7 @@ Resources:
         SecretStringTemplate: '{"username": "opsadmin"}'
         GenerateStringKey: "password"
         PasswordLength: 30
-        ExcludeCharacters: '"@/\!;$+%:`'''
+        ExcludeCharacters: "\"@/\\!;$+%:`'"
 
   LoadGenRole:
     Type: AWS::IAM::Role
@@ -635,7 +671,7 @@ Resources:
       SourceEndpointArn: !Ref PostgreSQLSourceEndpoint
       TableMappings: >-
         { "rules": [ { "rule-type": "selection", "rule-id": "1", "rule-name":
-        "1", "object-locator": { "schema-name": "public", "table-name":
+        "1", "object-locator": { "schema-name": "%", "table-name":
         "salesorder" }, "rule-action": "include" } ]}
       TargetEndpointArn: !Ref CustomKakfaEndpoint
 
@@ -737,9 +773,6 @@ Resources:
                 Action:
                   - "s3:ListBucket"
                   - "s3:GetBucketLocation"
-                Resource: !GetAtt EventStore.Arn
-              - Effect: Allow
-                Action:
                   - "s3:PutObject"
                   - "s3:GetObject"
                   - "s3:AbortMultipartUpload"
@@ -747,42 +780,37 @@ Resources:
                   - "s3:ListBucketMultipartUploads"
                   - "s3:DeleteObject"
                   - "s3:DeleteObjects"
-                Resource: "*"
+                Resource:
+                  - !Join ["", ["arn:aws:s3:::", !Ref EventStore]]
+                  - !Join ["", ["arn:aws:s3:::", !Ref EventStore, /*]]
               - Effect: "Allow"
                 Action:
                   - "kafka-cluster:Connect"
                   - "kafka-cluster:DescribeCluster"
-                Resource: !Ref MSKCluster
-              - Effect: "Allow"
-                Action:
                   - "kafka-cluster:ReadData"
-                  - "kafka-cluster:DescribeTopic"
-                Resource: "*"
-              - Effect: "Allow"
-                Action:
                   - "kafka-cluster:WriteData"
                   - "kafka-cluster:DescribeTopic"
-                Resource: "*"
-              - Effect: "Allow"
-                Action:
                   - "kafka-cluster:CreateTopic"
-                  - "kafka-cluster:WriteData"
-                  - "kafka-cluster:ReadData"
-                  - "kafka-cluster:DescribeTopic"
-                Resource: "*"
-              - Effect: "Allow"
-                Action:
                   - "kafka-cluster:AlterGroup"
                   - "kafka-cluster:DescribeGroup"
-                Resource:
-                  - "*"
+                Resource: !Ref MSKCluster
               - Effect: "Allow"
                 Action:
                   - "logs:CreateLogGroup"
                   - "logs:CreateLogStream"
                   - "logs:PutLogEvents"
                   - "logs:DescribeLogStreams"
-                Resource: "arn:aws:logs:*:*:*"
+                Resource:
+                  !Join [
+                    "",
+                    [
+                      "arn:aws:logs:",
+                      !Ref "AWS::Region",
+                      ":",
+                      !Ref "AWS::AccountId",
+                      ":*",
+                    ],
+                  ]
 
   KafkaConnectPluginLambdaRole:
     Type: AWS::IAM::Role
@@ -821,11 +849,10 @@ Resources:
                 Action:
                   - "s3:ListBucket"
                   - "s3:GetBucketLocation"
-                Resource: !GetAtt EventStore.Arn
-              - Effect: Allow
-                Action:
                   - "s3:GetObject"
-                Resource: "*"
+                Resource:
+                  - !Join ["", ["arn:aws:s3:::", !Ref EventStore]]
+                  - !Join ["", ["arn:aws:s3:::", !Ref EventStore, /*]]
 
   KafkaConnectPluginUploadLambdaRole:
     Type: AWS::IAM::Role
@@ -853,11 +880,10 @@ Resources:
                 Action:
                   - "s3:ListBucket"
                   - "s3:GetBucketLocation"
-                Resource: !GetAtt EventStore.Arn
-              - Effect: Allow
-                Action:
                   - "s3:PutObject"
-                Resource: "*"
+                Resource:
+                  - !Join ["", ["arn:aws:s3:::", !Ref EventStore]]
+                  - !Join ["", ["arn:aws:s3:::", !Ref EventStore, /*]]
 
   KafkaConnectGetBrokerLambdaRole:
     Type: AWS::IAM::Role
@@ -902,10 +928,6 @@ Resources:
             Action:
               - "s3:ListBucket"
               - "s3:GetBucketLocation"
-            Resource: !GetAtt EventStore.Arn
-          - Effect: Allow
-            Principal: "*"
-            Action:
               - "s3:PutObject"
               - "s3:GetObject"
               - "s3:AbortMultipartUpload"
@@ -913,7 +935,9 @@ Resources:
               - "s3:ListBucketMultipartUploads"
               - "s3:DeleteObject"
               - "s3:DeleteObjects"
-            Resource: "*"
+            Resource:
+              - !Join ["", ["arn:aws:s3:::", !Ref EventStore]]
+              - !Join ["", ["arn:aws:s3:::", !Ref EventStore, /*]]
       RouteTableIds:
         - !Ref PrivateRouteTable1
         - !Ref PrivateRouteTable2
