scope down ddb policy

--- a/s3-event-store.yaml
+++ b/s3-event-store.yaml
@@ -397,7 +397,7 @@ Resources:
                         !Ref "AWS::Region",
                         ":",
                         !Ref "AWS::AccountId",
-                        ":table/*",
+                        ":table/salesorder",
                       ],
                     ],
                     !Join [
