--- a/kafka-event-stream.yaml
+++ b/kafka-event-stream.yaml
@@ -14,10 +14,6 @@ Parameters:
     Default: db.t3.small
     AllowedPattern: "^db\\.[a-z][0-9].[a-zA-Z0-9]*$"
     Description: Enter replication instance class. Default is db.t3.small
-  SourceDatabaseName:
-    Type: String
-    Default: postgres
-    Description: Source database name
   EnvironmentName:
     Description: An environment name that is prefixed to resource names
     Type: String
@@ -273,7 +269,7 @@ Resources:
     Type: "AWS::RDS::DBInstance"
     Properties:
       DBInstanceIdentifier: !Ref EnvironmentName
-      DBName: !Ref SourceDatabaseName
+      DBName: postgres
       DBInstanceClass: !Ref SourceDatabaseInstanceClass
       DBSubnetGroupName: !Ref DBSubnetGroup
       DBParameterGroupName: !Ref RDSDBParameterGroup
@@ -299,7 +295,7 @@ Resources:
 
   PostgreSQLSourceEndpoint:
     Properties:
-      DatabaseName: !Ref SourceDatabaseName
+      DatabaseName: postgres
       EndpointType: source
       EngineName: postgres
       ExtraConnectionAttributes: "PluginName=test_decoding"
